# routex

./: AGENTS.md  Cargo.toml
examples/: add.rs  delete.rs  monitor.rs
reference/darwin_route/: Makefile  keywords.h  network_cmds_lib.c  network_cmds_lib.h  route  route.c
src/: lib.rs
src/linux/: mod.rs
src/macos/: mod.rs  rtmsg.rs
src/windows/: mod.rs
