[package]
name = "routex"
version = "0.1.5"
edition = "2021"

license = "MIT"
authors = ["dawson a957360688@gmail.com"]
repository = "https://github.com/Dawson-Jones/routex"
description = "cross platform route implement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ipnetwork = "0.20"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = "0.19"
netlink-packet-core = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }
